--- a/DepuracionDatos.ipynb
+++ b/DepuracionDatos.ipynb
@@ -6,7 +6,7 @@
       "name": "DepuracionDatos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNtGcPiJNw24RlG0Cf/1nwG",
+      "authorship_tag": "ABX9TyPFVm5MkbOb1fwSnJkwR/nW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,9 +126,9 @@
           "height": 427
         },
         "id": "xrut6b5eI5OG",
-        "outputId": "0b91ea0f-6903-43d0-d5f7-16c011b6901b"
+        "outputId": "f1a83078-01ee-40a9-cd01-c358ff21ab92"
       },
-      "execution_count": 65,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,21 +170,21 @@
               "8    11793.0     3719.0    3329.0       0.0     432.0    1000.0    1000.0   \n",
               "9    13007.0    13912.0       0.0       0.0       0.0   13007.0    1122.0   \n",
               "\n",
-              "   PAY_AMT6  Mora RangoPoblacional  \n",
-              "0       0.0     1            Joven  \n",
-              "1    2000.0     1            Joven  \n",
-              "2    5000.0     0           Adulto  \n",
-              "3    1000.0     0           Adulto  \n",
-              "4     679.0     0           Adulto  \n",
-              "5     800.0     0           Adulto  \n",
-              "6   13770.0     0            Joven  \n",
-              "7    1542.0     0            Joven  \n",
-              "8    1000.0     0            Joven  \n",
-              "9       0.0     0           Adulto  "
+              "   PAY_AMT6  Mora RangoPoblacional    Sexo  \n",
+              "0       0.0     1            Joven   Mujer  \n",
+              "1    2000.0     1            Joven   Mujer  \n",
+              "2    5000.0     0           Adulto   Mujer  \n",
+              "3    1000.0     0           Adulto   Mujer  \n",
+              "4     679.0     0           Adulto  Hombre  \n",
+              "5     800.0     0           Adulto  Hombre  \n",
+              "6   13770.0     0            Joven  Hombre  \n",
+              "7    1542.0     0            Joven   Mujer  \n",
+              "8    1000.0     0            Joven   Mujer  \n",
+              "9       0.0     0           Adulto  Hombre  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c2ab97b3-2e31-4f07-95eb-3a955e7d14da\">\n",
+              "  <div id=\"df-384188c4-bd0e-4d0d-a120-f79b78e701ee\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -230,6 +230,7 @@
               "      <th>PAY_AMT6</th>\n",
               "      <th>Mora</th>\n",
               "      <th>RangoPoblacional</th>\n",
+              "      <th>Sexo</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -261,6 +262,7 @@
               "      <td>0.0</td>\n",
               "      <td>1</td>\n",
               "      <td>Joven</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -290,6 +292,7 @@
               "      <td>2000.0</td>\n",
               "      <td>1</td>\n",
               "      <td>Joven</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -319,6 +322,7 @@
               "      <td>5000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Adulto</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -348,6 +352,7 @@
               "      <td>1000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Adulto</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -377,6 +382,7 @@
               "      <td>679.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Adulto</td>\n",
+              "      <td>Hombre</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
@@ -406,6 +412,7 @@
               "      <td>800.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Adulto</td>\n",
+              "      <td>Hombre</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
@@ -435,6 +442,7 @@
               "      <td>13770.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Joven</td>\n",
+              "      <td>Hombre</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
@@ -464,6 +472,7 @@
               "      <td>1542.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Joven</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
@@ -493,6 +502,7 @@
               "      <td>1000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Joven</td>\n",
+              "      <td>Mujer</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
@@ -522,11 +532,12 @@
               "      <td>0.0</td>\n",
               "      <td>0</td>\n",
               "      <td>Adulto</td>\n",
+              "      <td>Hombre</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2ab97b3-2e31-4f07-95eb-3a955e7d14da')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-384188c4-bd0e-4d0d-a120-f79b78e701ee')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -577,12 +588,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c2ab97b3-2e31-4f07-95eb-3a955e7d14da button.colab-df-convert');\n",
+              "          document.querySelector('#df-384188c4-bd0e-4d0d-a120-f79b78e701ee button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c2ab97b3-2e31-4f07-95eb-3a955e7d14da');\n",
+              "          const element = document.querySelector('#df-384188c4-bd0e-4d0d-a120-f79b78e701ee');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -605,7 +616,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 74
         }
       ]
     },
@@ -1069,6 +1080,146 @@
           },
           "metadata": {},
           "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Función género (1: Hombre, 2: Mujer)"
+      ],
+      "metadata": {
+        "id": "qse0a91iY0OD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.Genero"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GfCqbBkKY-Bd",
+        "outputId": "8dda2681-35c4-4ee0-80cc-dd4a53d315f0"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        2\n",
+              "1        2\n",
+              "2        2\n",
+              "3        2\n",
+              "4        1\n",
+              "        ..\n",
+              "29995    1\n",
+              "29996    1\n",
+              "29997    1\n",
+              "29998    1\n",
+              "29999    1\n",
+              "Name: Genero, Length: 30000, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CalculoGenero(Genero):\n",
+        "  if (Genero == 1):\n",
+        "    Sexo=\"Hombre\"\n",
+        "  elif (Genero == 2):\n",
+        "    Sexo=\"Mujer\"\n",
+        "  else:\n",
+        "    Sexo=\"VerificarGenero\"\n",
+        "  return Sexo"
+      ],
+      "metadata": {
+        "id": "o0oX_cKSZLSl"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.Genero.apply(CalculoGenero)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b2AWh3iwaAXc",
+        "outputId": "07a4ed05-7e7a-4dd9-fb5e-d462ec8fbc4b"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method IndexOpsMixin.value_counts of 0         Mujer\n",
+              "1         Mujer\n",
+              "2         Mujer\n",
+              "3         Mujer\n",
+              "4        Hombre\n",
+              "          ...  \n",
+              "29995    Hombre\n",
+              "29996    Hombre\n",
+              "29997    Hombre\n",
+              "29998    Hombre\n",
+              "29999    Hombre\n",
+              "Name: Genero, Length: 30000, dtype: object>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"Sexo\"]=df.Genero.apply(CalculoGenero)"
+      ],
+      "metadata": {
+        "id": "jPlgUmeJai85"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.Sexo.value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rfMpP1MuayJI",
+        "outputId": "6b68b008-1a05-421a-a156-eb901dbcd89a"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Mujer     18112\n",
+              "Hombre    11888\n",
+              "Name: Sexo, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
         }
       ]
     }
